# BacktestStation

./: .env.example  .gitignore  AGENTS.md  BRANCH_AUDIT.md  CLAUDE.md  README.md  REPO_GUIDE.md  SESSION_NOTES.md  SIMPLIFY_PLAN.md  data_io.py  start.bat
backend/: .engine_baseline.txt  debug_fractal_compare_to_live.py  debug_fractal_setup_lifecycle.py  debug_fractal_zero_trades.py  pyproject.toml
backend/app/: main.py
backend/app/api/: ai_context.py  autopsy.py  backtest_export.py  backtests.py  chat.py  data_health.py  data_quality.py  datasets.py  experiments.py  features.py  health.py  imports.py  knowledge.py  monitor.py  notes.py  ops.py  promotion_checks.py  prompts.py  prop_firm.py  replay.py  research.py  research_atlas.py  research_events.py  risk_profiles.py  settings.py  strategies.py  trade_replay.py
backend/app/backtest/: __init__.py  broker.py  engine.py  events.py  instruments.py  mbp1_engine.py  metrics.py  orders.py  runner.py  strategy.py
backend/app/cli/: export_openapi.py  (+29 more)
backend/scripts/: asset_feature_profiler.py  asset_universe_profiler.py  audit_coverage.py  audit_lookahead.py  backfill_continuous_tbbo.py  backfill_forming_volume_profile_outcomes.py  backfill_interval_true_range_outcomes.py  backfill_opening_gap_outcomes.py  backfill_research_outcomes_cached.py  backtest_live_bot.py  build_slim_anchors_2015_2017.py  capture_engine_baseline.py  co_lookahead_diagnostic.py  compare_plugin_to_live_bot.py  compute_outcomes_2015_2017.py  debug_trusted_plugin.py  diff_plugin_vs_trusted.py  expand_universe_run.py  export_research_events_to_parquet.py  filter_screen.py  full_universe_new_modes.py  generate_events_2015_2017.py  import_forex_factory_archive.py  import_fractal_promotion_checks.py  import_macro_events.py  materialize_mbo_trading_day_cache.py  ob_strict_rule_analysis.py  overnight_build.py  overnight_build_2026_05_10.py  overnight_orderflow_pipeline.py  overnight_queue.py  overnight_universe_2026_05_15.ps1  partition_historical_archive.py  pilot_new_session_modes.py  pull_all_mbp1_free.py  rank_combinations.py  rank_conditional_edge.py  rank_detectors_by_edge.py  rank_detectors_multi_symbol.py  refresh_dashboards.py  (+15 more)
backend/tests/: test_ai_context_api.py  test_all_level_reactions.py  test_autopsy_api.py  test_backtest_broker.py  test_backtest_engine.py  test_backtest_export_api.py  test_backtest_orders.py  test_backtest_run_api.py  test_backtest_runner.py  test_backtest_strategy_ma.py  test_backtest_tags_api.py  test_backtests_delete_api.py  test_backtests_patch_api.py  test_backtests_strategies_api.py  test_build_developing_vwap_sd1_context.py  test_chat_context.py  test_chat_section_filter.py  test_chat_stream.py  test_cli.py  test_composable_strategy.py  test_config_snapshot_api.py  test_cost_estimator.py  test_daily_puller.py  test_dashboard_data_health.py  test_dashboard_live.py  test_dashboard_trials_candidates.py  test_data_health.py  test_data_manifest.py  test_data_quality_api.py  test_data_reader.py  test_data_schema.py  test_dataset_scan_cli.py  test_dataset_snapshots.py  test_datasets_api.py  test_db_models.py  test_developing_vwap_sd1.py  test_displacement_detector.py  test_displacement_reactions.py  test_drift_comparison.py  test_engine_rejects_non_utc_bars.py  (+118 more)
client/bsdata/: README.md  pyproject.toml
frontend/src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
(+2185 files in other folders)
