[project]
name = "backteststation-backend"
version = "0.1.0"
description = "BacktestStation backend — FastAPI"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "sqlalchemy>=2.0",
    "python-multipart>=0.0.20",
    # Parquet / dataframes for reading local candle + TBBO files.
    "pandas>=2.2",
    "pyarrow>=17",
    # Cloudflare R2 uploader/client use the S3-compatible API.
    "boto3>=1.34",
    "botocore>=1.34",
    # Forward Drift Monitor uses chi2_contingency for entry-time drift.
    "scipy>=1.11",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "httpx>=0.28",
    "ruff>=0.7",
    "black>=24.10",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B"]

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "slow: long-running tests (e.g. multi-month backtest regressions); run explicitly with `pytest -m slow`",
]
