[project]
name = "bsdata"
version = "0.1.0"
description = "BacktestStation cloud warehouse client (Cloudflare R2 + local cache)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pyarrow>=15.0",
    "pandas>=2.0",
    "boto3>=1.34",
    "botocore>=1.34",
]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["bsdata*"]
