[package]
name = "insyncalgo-desktop"
version = "0.1.0"
description = "InSyncAlgo desktop shell"
edition = "2021"

# Tauri 2 scaffolds expect a library crate; the binary in src/main.rs
# delegates to it. Keeping the lib + bin split matches the upstream
# template so future Tauri updates apply cleanly.
[lib]
name = "insyncalgo_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
strip = true
panic = "abort"
